# code-hovel

./: .gitignore  LICENSE  README.md
LeetCode/: temp.cpp
LeetCode/daily/: 1035不相交的线.cpp  两点之间不包含任何点的最宽垂直区域.cpp  交换一次的先前排列.cpp  另一棵树的子树.cpp  只出现一次的数字Ⅱ.cpp  合并石头的最低成本.cpp  多边形三角剖分的最低得分.cpp  所有数对中位数不同之和.cpp  找出与数组相加的整数Ⅱ.cpp  找出所有稳定的二进制数组.cpp  最佳观光组合.cpp  算数三元组的数目.cpp  统计字典序元音字符串的数目.cpp  隐藏个人信息.cpp
LeetCode/剑指offer/: 0~n-1中缺失的数字.cpp  BST与双向链表.cpp  BST后序遍历.cpp  X矩阵中的路径.cpp  n个骰子的点数.cpp  xx数组中数字出现的次数.cpp  丑数.cpp  两个栈实现队列.cpp  两链表第一个公共节点.cpp  之字形层序遍历二叉树.cpp  二叉搜索树的最近公共祖先.cpp  二叉搜索树的第k大节点.cpp  二叉树中和为某一值的路径.cpp  二叉树深度.cpp  二叉树的最近公共祖先.cpp  二叉树镜像.cpp  二维数组中的查找.cpp  二进制中1的个数.cpp  从上到下打印二叉树.cpp  倒序打印列表.cpp  删除链表的节点.cpp  剪绳子.cpp  包含min函数的栈.cpp  反转列表.cpp  合并两个排序的链表.cpp  和为s的两个数字.cpp  和为s的连续正数序列.cpp  圆圈中最后剩下的数.cpp  复杂链表的复制.cpp  字符串的排列.cpp  对称二叉树判断.cpp  层序遍历二叉树.cpp  左旋转字符串.cpp  平衡二叉树.cpp  打印从1到最大的n位数.cpp  把数字翻译成字符串.cpp  把数组排成最小的数.cpp  排序数组中查找数字.cpp  数字序列中某一位的数字.cpp  数组中出现次数超过一半的数字.cpp  (+22 more)
LeetCode/剑指offer专项练习/: 0和1 个数相同的子数组.cpp  不含重复字符的最长子字符串.cpp  乘积小于k的子数组.cpp  二叉树每层最大值.cpp  二维子矩阵的和.cpp  二进制加法.cpp  删除链表的倒数第n个结点.cpp  前n个数字二进制中1的个数.cpp  单词长度的最大乘积.cpp  变位词组.cpp  只出现一次的数字.cpp  后缀表达式.cpp  和为k的子数组.cpp  和大于等于target的最短子数组.cpp  回文子字符串的个数.cpp  外星语言是否排序.cpp  字符串中的变位词.cpp  字符串中的所有变位词.cpp  小行星碰撞.cpp  展平多级双向链表.cpp  排列数组中两个数字的和.cpp  排序的循环链表.cpp  数组中和为0的三个数.cpp  整数除法.cpp  最多删除一个字符得到回文.cpp  最小时间差.cpp  最近最少使用缓存.cpp  有效的回文.cpp  每日温度.cpp  重排链表.cpp  链表中环的入口节点.cpp  链表中的两数相加.cpp
article/: docker笔记.md  effective c++ note.md  redis_note.md  rust入门.md  study rust.md  tcpip.md  tcpip网络编程笔记.md  一个简单的html模板.html  散列（hash）.md  数据结构笔记.md  树.md  简单的js使用.js  网络常用函数.md  设计模式笔记.md
code/: BST.hpp  bind.cpp  bst.cpp  buckets.hpp  chrono.cpp  complex.cpp  format_cpp20.cpp  graph.cpp  kmp.cpp  parallel_quick_sort.cpp  regex.cpp  shared_ptr_virtualclass.cpp  unordinspect.cpp  vector下标访问越界.cpp  内存模型.cpp  函数对象.cpp  智能指针.cpp  极值.cpp  浮点数比较.cpp  算法和迭代器.cpp  计时器和时钟.cpp  逐块构造pair.cpp  随机.cpp
code/data-structure/: CMakeLists.txt
code/data-structure/graph/: graph.cpp  graph.hpp
code/data-structure/hash-table/: CMakeLists.txt
code/data-structure/tree/: CMakeLists.txt  avltree.hpp  binarytree.hpp
code/design patterns/: factory_method.cpp  observer.cpp
code/interface_impl/: base.h  base_impl.cpp  drived_impl.cpp  drived_impl.h  main.cpp
code/modern cmake/cmake0/: CMakeLists.txt
code/modern cmake/cmake0/src/: configure.h.in
code/modern cmake/cmake3/src/: CMakeLists.txt  calc.cpp  calc.h  main.cpp
code/modern cmake/cmake3/test/: unit_test.cpp
code/modern cmake/cmake4/: CMakeLists.txt
code/modern cmake/cmake5/: CMakeLists.txt  calc.h
code/modern cmake/cmake6/: CMakeLists.txt
code/rust-test/src/: main.rs
code/some-cpp/: meta_template.cpp  sort.cpp  spinning_door_transformation.h  useBitset.cpp  并发.cpp  观察者模式.cpp
code/some-cpp/interface_impl/: base_impl.h
code/some-else/: alloc.hpp  constptr.cpp  filesystem.cpp  format_cpp20.cpp  gbk到utf-8.cpp  graph.cpp  map_and_unordermap.cpp  new_delete.cpp  rotate_elements.cpp  unordered_setUse.cpp  自定义迭代器.hpp
code/some-else/interface_impl/: CMakeLists.txt  drived.cpp
code/some-else/template_demo/: template_interface.hpp
data-structure/: CMakeLists.txt  main.cpp
data-structure/graph/: CMakeLists.txt  max_stream.cpp
data-structure/hash-table/: CMakeLists.txt  hash_table.hpp
data-structure/include/: vector.hpp
data-structure/src/: CMakeLists.txt  vector.cpp
data-structure/tree/: binarysearchtree.hpp
design patterns/: abstract_factory.cpp  chain_of_responsibolity.cpp  mediator.cpp  singleton.cpp  state.cpp  strategy.cpp
modern cmake/cmake0/src/: main.cpp
modern cmake/cmake1/: CMakeLists.txt
modern cmake/cmake2/: CMakeLists.txt  main.cpp
modern cmake/cmake3/: CMakeLists.txt
modern cmake/cmake3/test/: CMakeLists.txt  calc_test.h
modern cmake/cmake5/: calc.cpp
rust-test/: rust入门.md
some-else/: AVL树.cpp  buildTree.hpp  chrono.cpp  coroutine.cpp  future-promise-packaged_task.cpp  io流和编码.cpp  manacher算法.cpp  my_allocator.cpp  named_template_args.cpp  unordmultimap.cpp  分配器.cpp  四则位运算.cpp  容器操作.cpp
some-else/html_demo/: 简单的css.css
some-else/interface_impl/: base.cpp  drived.h  interface_impl.cpp
some-else/template_demo/: main.cpp  template_inner.hpp
webfullprocess_demo/backend/: main.cpp
webfullprocess_demo/frontend/: index.html  script.js  style.css
